--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dash-reader-frontend",
   "version": "0.1.0",
-  "homepage": "https://spensermg.github.io/Dash-Reader-Frontend",
+  "homepage": "https://spensermg.github.io/Dash-Reader-Project",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
